# WaveNetMusic

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: rust.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/wave/net/app/: MainActivity.kt
app/android/app/src/main/res/drawable/: splashscreen_icon.xml
app/android/app/src/main/res/values/: styles.xml
app/android/app/src/main/res/values-night/: styles.xml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  routes.dart
app/lib/models/: library_models.dart  server_models.dart
app/lib/models/database/: app_database.dart  app_database.g.dart
app/lib/pages/: album_page.dart  home_page.dart  launch_page.dart  library_page.dart  my_playlist_page.dart  now_playing_page.dart  playlist_detail_page.dart  search_page.dart
app/lib/pages/home_pages/: home_page.dart  library_page.dart  my_playlist_page.dart  search_page.dart
app/lib/pages/launch_pages/: credentials_page.dart  host_search_page.dart
app/lib/services/: audio_handler.dart  server_manager.dart  waveclient.dart
app/lib/widgets/: album_cover_card.dart  album_cover_title_preview.dart  album_song_tile.dart  logo_widget.dart  player_bar.dart  player_island.dart  side_panel.dart  track_list_tile.dart
app/linux/: CMakeLists.txt
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/web/: index.html  manifest.json
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
entity/src/: lib.rs
entity/src/entities/: album.rs  artist.rs  artist_album.rs  artist_track.rs  artwork.rs  cover_art.rs  mod.rs  playlist.rs  playlist_track_item.rs  playlist_user.rs  prelude.rs  track.rs  user.rs  user_likes.rs
migration/src/: lib.rs  m20240509_015015_create_album_and_tracks.rs  m20240722_124400_add_user_authentication.rs  m20240727_153616_add_playlist_support.rs  m20240729_020956_add_likes_functionality.rs  m20240810_111631_add_cover_art_functionality.rs
proto/: wavenet.proto
src/: main.rs
src/models/: album.rs  artist.rs  error.rs  meili_models.rs  mod.rs  playlist.rs  track.rs  user.rs
src/proto/: auth_proto.rs  authentication_proto.rs  library_proto.rs  likes_proto.rs  mod.rs  playlist_proto.rs  wavenet.rs
src/routes/: axum_routes.rs  mod.rs
src/services/: auth_proto.rs  auth_service.rs  library_service.rs  liked_service.rs  mod.rs  playlist_service.rs  queue_service.rs  search_service.rs
