workspace = { members = [".","entity","migration"] }


[package]
name = "wavenet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
futures = "0.3.30"
clap = { version = "4.5.4", features = ["derive"] }
tonic-reflection = "0.11.0"
tonic-build = "0.11.0"
sea-orm = { version = "0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
audiotags = "0.5.0"
walkdir = "2.5.0"
axum = "0.7.5"
mime_guess = "2.0.4"
tokio-util = { version = "0.7.11", features = ["io"] }
serde = { version = "1.0.202", features = ["derive"] }
hyper = "1.3.1"
tower-http = {version = "0.5.2", features = ["fs","cors"]}
tonic-web = "0.11.0"
blurhash = "0.2.1"
image = {version = "0.25.1", features = ["default","jpeg","png"]}
dotenv = { version = "0.15.0", features = ["cli"] }
meilisearch-sdk = {version = "0.26.1", features = ["default"]}
serde_json = "1.0.117"
paris = "1.5.15"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
