workspace = { members = [".", "entity", "migration"] }


[package]
name = "wavenet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.39.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
futures = "0.3.30"
clap = { version = "4.5.11", features = ["derive"] }
tonic-reflection = "0.12.1"
tonic-build = "0.12.1"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
audiotags = "0.5.0"
walkdir = "2.5.0"
axum = "0.7.5"
mime_guess = "2.0.5"
tokio-util = { version = "0.7.11", features = ["io"] }
serde = { version = "1.0.204", features = ["derive"] }
hyper = "1.4.1"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tonic-web = "0.12.1"
blurhash = "0.2.3"
image = { version = "0.25.2", features = ["default", "jpeg", "png"] }
dotenv = { version = "0.15.0", features = ["cli"] }
meilisearch-sdk = { version = "0.27.0", features = ["default"] }
serde_json = "1.0.120"
paris = "1.5.15"
argon2 = "0.5.3"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = "0.4.38"
symphonia = { version = "0.5.4", features = ["default", "all", "opt-simd"] }
img_hash = { version = "3.2.0" }
md5 = "0.7.0"

[build-dependencies]
tonic-build = "0.12.1"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"
